<resources>
    <string name="app_name">Reminder App</string>
    <string name="add">Add</string>
    <string name="select_time">Select Time</string>
    <string name="time">Time</string>
    <string name="select_date">Select Date</string>
    <string name="description">Description</string>
    <string name="title">Title</string>
    <string name="add_reminder">Add Reminder</string>
    <string name="no_reminders">No Reminders</string>
    <string name="reminder_app">Reminder App</string>
    <string name="update">Update</string>
    <string name="update_task">Update Reminder</string>
    <string name="date">Date</string>
    <string name="the_task_list_is_empty">The task list is empty!</string>
    <string name="empty">Empty</string>
    <string name="fab">Fab</string>
    <string name="pause">Pause</string>
    <string name="start">Start</string>
    <string name="stop">Stop</string>
</resources>