<?xml version="1.0" encoding="utf-8"?>

<layout>

    <data>

        <variable
            name="viewModel"
            type="com.finalproject.reminderapp.ui.viewModels.BaseTaskViewModel" />
    </data>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"

        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="30dp"
        tools:context=".ui.fragments.AddTaskFragment">

        <LinearLayout
            android:id="@+id/ll_details_background"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_title_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="30dp"
                android:gravity="center"
                android:text="@string/add_task"
                android:textSize="35sp" />

            <EditText
                android:id="@+id/tv_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/edit_text"
                android:hint="@string/title"
                android:text="@={viewModel.title}"
                android:textSize="30sp" />

            <EditText
                android:id="@+id/tv_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@drawable/edit_text"
                android:gravity="top"
                android:hint="@string/description"
                android:lines="5"
                android:maxLines="4"
                android:text="@={viewModel.desc}"
                android:textSize="20sp" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnSubmit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:text="@string/add" />

        </LinearLayout>

    </LinearLayout>
</layout>